<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ListPreference
        android:title="@string/pref_order_direction_title"
        android:key="@string/pref_order_direction_key"
        android:defaultValue="@string/pref_order_direction_default"
        android:entryValues="@array/pref_values_sort_order_values"
        android:entries="@array/pref_values_sort_order_options" />


    <ListPreference
        android:title="@string/pref_order_field_title"
        android:key="@string/pref_order_field_key"
        android:defaultValue="@string/pref_order_field_default"
        android:entryValues="@array/pref_values_sort_field_values"
        android:entries="@array/pref_values_sort_field_options" />


</PreferenceScreen>